--- a/style.css
+++ b/style.css
@@ -6,13 +6,7 @@ body, * {
   box-sizing: border-box;
 }
 
-.container-top {
-  width: 100vw;
-  height: 100vh;
-}
-
 header {
-  padding: 20px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -34,14 +28,25 @@ a:hover {
   color: #ec5242;
 }
 
+a > img {
+  width: 100px;
+  height: 80px;
+}
+
 .introduction {
-  padding: 5% 0 0 15%;
+  width: 99vw;
+  height: 100vh;
+  padding-left: 15%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 35px;
+  gap: 30px;
   font-family: 'Lato',sans-serif;
+  background-image: url(images/leone-venter-VieM9BdZKFo-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-position: 100% 0%;
+  background-size: cover;
 }
 
 .introduction h1 {
@@ -73,15 +78,20 @@ section.main {
   background-color: black;
   font-family: 'Lato', sans-serif;
   color: #fff;
+  background-image: url(images/keith-misner-h0Vxgz5tyXA-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.main > h1 {
-  padding-bottom: 12px;
-  border-bottom: 2px solid #ec5242;
+h1 > hr {
+  margin: 12px auto 0 auto;
+  width: 75px;
+  border: 1px solid #ec5242;
 }
 
 .main > p {
   border-bottom: 1px solid #d3d3d3;
+  font-weight: 600;
   color: #d3d3d3;
 }
 
@@ -117,4 +127,90 @@ figcaption {
   font-size: 25px;
   font-weight: 600;
   color:#ec5242;
+}
+
+.technologies {
+  padding: 50px 75px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  row-gap: 35px;
+  font-family: 'Lato', sans-serif;
+}
+
+.technologies > h1 {
+  grid-column: 1/3;
+}
+
+.tech-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.tech-details {
+  max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.tech-details > hr {
+  width: 30px;
+}
+
+.tech-details > span {
+  color:#ec5242;
+  font-weight: 600;
+}
+
+.tech-details > p {
+  font-size: 14px;
+  color:#272a31;
+}
+
+.feedback {
+  padding: 30px;
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+  color: #d3d3d3;
+  background-color: #272a31;
+}
+
+.slider {
+  height: 100px;
+  overflow: hidden;
+  font-weight: 600;
+}
+
+.slider > * {
+  height: 100%;
+  margin-bottom: 80px;
+  padding-top: 15px;
+  transition: all 0.3s ease;
+  animation: slide 10s infinite;
+}
+
+@keyframes slide {
+  0% {margin-top:80px;}
+  30% {margin-top: 0px;}
+  35% {margin-top: 0px;}
+  70%{margin-top: -75px;}
+  75%{margin-top: -75px;}
+  100% {margin-top: -120px;}
+}
+
+.slider > *:hover {
+  animation-play-state: paused;
+}
+
+footer{
+  padding: 25px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  font-family: 'Lato', sans-serif;
+  color: #272a31;
+  background-color: #d3d3d3;
 }
