--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ header {
   align-items: center;
 }
 
+header.mobile {
+  display: none;
+}
+
 button.hamburger {
   display: none;
 }
@@ -20,6 +24,7 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 50px;
+  font-weight: 600;
 }
 
 a {
@@ -35,6 +40,11 @@ a:hover {
 a > img {
   width: 100px;
   height: 80px;
+  transition: all 0.3s ease;
+}
+
+a > img:hover {
+  transform: skew(20deg) scale(1.1);
 }
 
 .introduction {
@@ -66,6 +76,10 @@ a > img {
   font-size: 15px;
   font-weight: 600;
   color:#272a31;
+}
+
+.intro-description.mobile{
+  display: none;
 }
 
 details {
@@ -158,6 +172,10 @@ figcaption {
   gap: 16px;
 }
 
+.tech-cards > img {
+  width: 100px;
+}
+
 .tech-details {
   max-width: 350px;
   display: flex;
@@ -203,6 +221,7 @@ button.more {
   padding-top: 15px;
   transition: all 0.3s ease;
   animation: slide 10s infinite;
+  animation-timing-function: ease-in-out;
 }
 
 @keyframes slide {
@@ -234,6 +253,39 @@ footer{
     display: none;
   }
 
+  header.mobile {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    background-color: #d3d3d3;
+    opacity: 0.9;
+    font-family: 'Lato', sans-serif;
+    color: #272a31;
+    transition: all 0.3s ease-in-out;
+  }
+
+  nav.mobile-menu {
+    width: 80%;
+    align-self: center;
+    justify-content: center;
+  }
+
+  .mobile-menu.links {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    font-size: 25px;
+    text-decoration: underline;
+    text-decoration-color: #272a31;
+    text-underline-offset: 1px;
+  }
+
 .intro-header {
   font-weight: bold;
   font-size: 48px;
@@ -242,9 +294,21 @@ footer{
 .introduction {
   width: 100vw;
   height: 100vh;
+  box-sizing: content-box;
   padding: 12px;
   justify-content: flex-start;
-  gap: 24px;
+  gap: 35px;
+}
+
+.intro-description {
+  display: none;
+}
+
+.intro-description.mobile {
+  display: inline;
+  font-size: 15px;
+  font-weight: 600;
+  color:#272a31;
 }
 
 button.hamburger {
@@ -252,6 +316,13 @@ button.hamburger {
   align-self: baseline;
   border: none;
   font-size: 35px;
+}
+
+button.close-menu {
+  padding: 20px;
+  border: none;
+  font-size: 35px;
+  background-color: inherit;
 }
 
 .card {
