--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-body, * {
+body,
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -30,7 +31,7 @@ ul {
 a {
   text-decoration: none;
   color: #272a31;
-  transition:all 0.25s ease;
+  transition: all 0.25s ease;
 }
 
 a:hover {
@@ -41,6 +42,10 @@ a > img {
   width: 100px;
   height: 80px;
   transition: all 0.3s ease;
+}
+
+.tech-cards > img {
+  width: 100px;
 }
 
 a > img:hover {
@@ -56,7 +61,7 @@ a > img:hover {
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
-  font-family: 'Lato',sans-serif;
+  font-family: 'Lato', sans-serif;
   background-image: url(images/leone-venter-VieM9BdZKFo-unsplash.jpg);
   background-repeat: no-repeat;
   background-position: 100% 0%;
@@ -75,10 +80,10 @@ a > img:hover {
 .intro-description {
   font-size: 15px;
   font-weight: 600;
-  color:#272a31;
+  color: #272a31;
 }
 
-.intro-description.mobile{
+.intro-description.mobile {
   display: none;
 }
 
@@ -123,7 +128,7 @@ div.cards {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 8px; 
+  gap: 8px;
 }
 
 .card {
@@ -137,7 +142,7 @@ div.cards {
   text-align: center;
   color: #d3d3d3;
   background-color: rgba(39, 42, 49, 0.7);
-  box-shadow: rgba(0, 0, 0, 0.8) 8px 8px 5px;;
+  box-shadow: rgba(0, 0, 0, 0.8) 8px 8px 5px;
   transition: all 0.3s ease-in-out;
 }
 
@@ -150,7 +155,7 @@ figcaption {
   font-family: 'Lato', sans-serif;
   font-size: 25px;
   font-weight: 600;
-  color:#ec5242;
+  color: #ec5242;
 }
 
 .technologies {
@@ -172,10 +177,6 @@ figcaption {
   gap: 16px;
 }
 
-.tech-cards > img {
-  width: 100px;
-}
-
 .tech-details {
   max-width: 350px;
   display: flex;
@@ -188,13 +189,13 @@ figcaption {
 }
 
 .tech-details > span {
-  color:#ec5242;
+  color: #ec5242;
   font-weight: 600;
 }
 
 .tech-details > p {
   font-size: 14px;
-  color:#272a31;
+  color: #272a31;
 }
 
 button.more {
@@ -225,19 +226,19 @@ button.more {
 }
 
 @keyframes slide {
-  0% {margin-top:80px;}
-  30% {margin-top: 0px;}
-  35% {margin-top: 0px;}
-  70%{margin-top: -75px;}
-  75%{margin-top: -75px;}
-  100% {margin-top: -116px;}
+  0% { margin-top: 80px; }
+  30% { margin-top: 0; }
+  35% { margin-top: 0; }
+  70% { margin-top: -75px; }
+  75% { margin-top: -75px; }
+  100% { margin-top: -116px; }
 }
 
 .slider > *:hover {
   animation-play-state: paused;
 }
 
-footer{
+footer {
   padding: 25px 0;
   display: flex;
   align-items: center;
@@ -286,103 +287,107 @@ footer{
     text-underline-offset: 1px;
   }
 
-.intro-header {
-  font-weight: bold;
-  font-size: 48px;
-}
+  .intro-header {
+    font-weight: bold;
+    font-size: 48px;
+  }
 
-.introduction {
-  width: 100vw;
-  height: 100vh;
-  box-sizing: content-box;
-  padding: 12px;
-  justify-content: flex-start;
-  gap: 35px;
-}
+  .introduction {
+    width: 100vw;
+    height: 100vh;
+    box-sizing: content-box;
+    padding: 12px;
+    justify-content: flex-start;
+    gap: 35px;
+  }
 
-.intro-description {
-  display: none;
-}
+  .intro-description {
+    display: none;
+  }
 
-.intro-description.mobile {
-  display: inline;
-  font-size: 15px;
-  font-weight: 600;
-  color:#272a31;
-}
+  .intro-description.mobile {
+    display: inline;
+    font-size: 15px;
+    font-weight: 600;
+    color: #272a31;
+  }
 
-button.hamburger {
-  display: block;
-  align-self: baseline;
-  border: none;
-  font-size: 35px;
-}
+  button.hamburger {
+    display: block;
+    align-self: baseline;
+    border: none;
+    font-size: 35px;
+  }
 
-button.close-menu {
-  padding: 20px;
-  border: none;
-  font-size: 35px;
-  background-color: inherit;
-}
+  button.close-menu {
+    padding: 20px;
+    border: none;
+    font-size: 35px;
+    background-color: inherit;
+  }
 
-.card {
-  width: 90%;
-  height: 100%;
-  flex-direction: row;
-}
+  .card {
+    width: 90%;
+    height: 100%;
+    flex-direction: row;
+  }
 
-.main > p {
-  display: none;
-}
+  .main > p {
+    display: none;
+  }
 
-button.join {
-  display: block;
-  padding: 18px;
-  border: none;
-  font-size: 22px;
-  font-weight: 600;
-  color: #fff;
-  background-color: #ec5242;
-}
+  button.join {
+    display: block;
+    padding: 18px;
+    border: none;
+    font-size: 22px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #ec5242;
+  }
 
-.technologies {
-  padding: 30px 20px;
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
-  row-gap: 30px;
-}
+  .technologies {
+    padding: 30px 20px;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    row-gap: 30px;
+  }
 
-.technologies > h1 {
-  grid-column: auto;
-}
+  .technologies > h1 {
+    grid-column: auto;
+  }
 
-.tech-cards {
-  flex-wrap: nowrap;
-}
+  .tech-cards {
+    flex-wrap: nowrap;
+  }
 
-.js, .ruby, .dbms, .git {
-  display: none;
-}
+  .js,
+  .ruby,
+  .dbms,
+  .git {
+    display: none;
+  }
 
-button.more {
-  width: 100%;
-  padding: 12px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-  color: #272a31;
-  background: #fff;
-  border: 1px solid #d3d3d3;
-}
+  button.more {
+    width: 100%;
+    padding: 12px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    color: #272a31;
+    background: #fff;
+    border: 1px solid #d3d3d3;
+  }
 
-.more > span {
-  font-size: large;
-  color: #ec5242;
-}
+  .more > span {
+    font-size: large;
+    color: #ec5242;
+  }
 
-.feedback, footer {
-  display: none;
-}
+  .feedback,
+  footer {
+    display: none;
+  }
 }
