--- a/about-page/style.css
+++ b/about-page/style.css
@@ -9,9 +9,13 @@ body,
 }
 
 header {
+  width: 100%;
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: rgb(255, 255, 255, 0.8);
 }
 
 header.mobile {
@@ -44,8 +48,7 @@ a:hover {
 }
 
 a > img {
-  width: 100px;
-  height: 80px;
+  width: 70px;
   transition: all 0.3s ease;
 }
 
@@ -63,7 +66,8 @@ a > img:hover {
 }
 
 .introduction {
-  width: 99vw;
+  margin-top: 72px;
+  max-width: 100vw;
   height: 100vh;
   padding: 35px 0;
   text-align: center;
@@ -207,9 +211,6 @@ footer {
     align-items: center;
     gap: 30px;
     font-size: 25px;
-    text-decoration: underline;
-    text-decoration-color: #272a31;
-    text-underline-offset: 1px;
   }
 
   .introduction > h1 {
@@ -231,6 +232,7 @@ footer {
   }
 
   .introduction {
+    margin: 0;
     width: 100vw;
     padding: 12px;
     gap: 24px;
@@ -315,7 +317,7 @@ footer {
     40% { margin-top: 40px; }
     60% { margin-top: -75px; }
     80% { margin-top: -75px; }
-    90% { margin-top: -150px; }
+    95% { margin-top: -150px; }
     100% { margin-top: -225px; }
   }
 
